[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-warmstart"
version = "0.1.0"
description = "Agent cold-start personality profiler: 5 questions → structured user profile → Hermes system prompt"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Diandian"}
]
keywords = ["hermes", "agent", "warmstart", "personality", "profile", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
warmstart = "warmstart.prompt:main"

[tool.setuptools.packages.find]
include = ["warmstart*"]
